--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-core-concepts",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
+    "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
