--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^6.30.3",
     "typescript": "^5.9.3"
   },
